--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
      <h1 align="center">Добро пожаловать!</h1>
      <h2 align="center">Сайт Краевой Клинической больницы №1 гор. Хабаровска</h2>
      <hr>
-     <img src="logo.png" alt="logo" />
+     <center>
+       <img src="logo.png" alt="logo" />
+     </center>
    </header>
    <div>
-     <h4>Меню</h4>
-     <ul>
-       <li>Наши врачи</li>
-       <li>Перечень процедур</li>
-       <li>Контакты</li>
-     </ul>
+     <a href="catalogue.html">Меню</a>
    </div class="container">
     <h4>История учреждения</h4>
     <div>
