--- a/index.html
+++ b/index.html
@@ -3,60 +3,112 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
 
     <title>Hospital</title>
   </head>
   <body>
-   <header>
+   <header class="header">
+    <div class="container">
+      <nav class="nav">
+        <ul class="menu">
+          <li class="menu-item">
+            <a href="catalogue.html">Меню</a>
+          </li>
+          <li class="menu-item">
+            <a href="">Что нового</a>
+          </li>
+        </ul>
+
+        <div class="logo">
+          <img class="logo-img" src="images/logo.png" width="120" alt="logo">
+        </div>
+        <ul>
+         <li>
+           <a class="phone" href="tel:79999999" >Горячая линия:+7-999-99-99</a>
+        </li>
+        </ul>
+      </nav>
+    </div>
+    <hr>
      <h1 align="center">Добро пожаловать!</h1>
      <h2 align="center">Сайт Краевой Клинической больницы №1 гор. Хабаровска</h2>
      <hr>
-     <center>
-       <img src="logo.png" alt="logo" />
-     </center>
+     
    </header>
-   <div>
-     <a href="catalogue.html">Меню</a>
-   </div class="container">
-    <h4>История учреждения</h4>
+
+<main class="main">
+  <section class="otdeleniya">
+    <h3 align="center">Отделения</h3>
     <div>
-      <p></p>
-        Краевое государственное бюджетное учреждение здравоохранения «Краевая
-        клиническая больница №1» имени профессора С.И.Сергеева – одно из
-        старейших лечебных учреждений Дальнего Востока.
-      </p>
-      <p>
-        История «Краевой клинической больницы №1» г.Хабаровска началась 1-го
-        января 1898года, когда по постановлению городской думы была построена
-        лечебница на 25 коек. Уже в 1927 году больница расширилась до 240 коек,
-        открыты 7 профильных отделений. Бурное развитие больницы начинается с
-        1967 года, после строительства нового хирургического корпуса с открытием
-        специализированной легочной, сердечно-сосудистой хирургии, реанимации,
-        применения искусственной почки. Седьмого января 1979 года больница
-        переезжает в новое здание по улице Краснодарской, где и продолжается её
-        дальнейшее развитие до сегодняшнего дня.
-      </p>
-      <p>
-        Незабываемый вклад в историю развития больницы внес профессор
-        С.И.Сергеев, чьим именем названа больница.
-      </p>
-      <p>
-        Под руководством С.И.Сергеева в краевой больнице создавались и
-        развивались специализированные отделения: торакальное,
-        сердечно-сосудистое, онкологическое, отделение «искусственной почки»,
-        отделение анестезиологии и реанимации. Коллектив огромной клиники,
-        возглавляемой профессором С.И.Сергеевым, был флагманом по оказанию
-        хирургической помощи жителям Дальнего Востока, а сам Сергеев с 1965 по
-        1972гг. являлся главным хирургом Хабаровского края.
-      </p>
-      <p>
-        Решением Хабаровской городской Думы от 22.02.2000 № 403 за неоценимый
-        вклад в развитие хирургической службы Хабаровского края «Краевой
-        клинической больнице №1» присвоено имя профессора С.И.Сергеева.
-      </p>
+      <div class="otdeleniye">
+        <a class="otdeleniye-link" href="#">
+        <img  class="img-responsive" src="images/polyclinic.jpg" width="270" height="270" alt="">
+      </a>
+        <h6><a href="#">Поликлиника</a></h6>
+      </div>
+      <div class="otdeleniye">
+        <a class="otdeleniye-link" href="#">
+          <img class="img-responsive" src="images/hirurg.jpg" width="270" height="270" alt="">
+        </a>
+        <h6><a href="#">Хирургические отделения</a></h6>
+      </div>
+      <div class="otdeleniye">
+        <a class="otdeleniye-link" href="#">
+          <img  class="" src="images/terapevt.jpg" width="270" height="270" alt="hirurg">
+        </a>
+        <h6><a href="#">Терапевтические отделения</a></h6>
+      </div>
+      <div class="otdeleniye">
+        <a class="otdeleniye-link" href="#">
+          <img  class="img-responsive" src="images/heart.jpg" width="270" height="270" alt="">
+        </a>
+        <h6><a href="#">Первичное сосудистое отделение</a></h6>
+      </div>
     </div>
+  </section>
+  <section class="history">
+  <h4>История учреждения</h4>
+    <p></p>
+      Краевое государственное бюджетное учреждение здравоохранения «Краевая
+      клиническая больница №1» имени профессора С.И.Сергеева – одно из
+      старейших лечебных учреждений Дальнего Востока.
+    </p>
+    <p>
+      История «Краевой клинической больницы №1» г.Хабаровска началась 1-го
+      января 1898года, когда по постановлению городской думы была построена
+      лечебница на 25 коек. Уже в 1927 году больница расширилась до 240 коек,
+      открыты 7 профильных отделений. Бурное развитие больницы начинается с
+      1967 года, после строительства нового хирургического корпуса с открытием
+      специализированной легочной, сердечно-сосудистой хирургии, реанимации,
+      применения искусственной почки. Седьмого января 1979 года больница
+      переезжает в новое здание по улице Краснодарской, где и продолжается её
+      дальнейшее развитие до сегодняшнего дня.
+    </p>
+    <p>
+      Незабываемый вклад в историю развития больницы внес профессор
+      С.И.Сергеев, чьим именем названа больница.
+    </p>
+    <p>
+      Под руководством С.И.Сергеева в краевой больнице создавались и
+      развивались специализированные отделения: торакальное,
+      сердечно-сосудистое, онкологическое, отделение «искусственной почки»,
+      отделение анестезиологии и реанимации. Коллектив огромной клиники,
+      возглавляемой профессором С.И.Сергеевым, был флагманом по оказанию
+      хирургической помощи жителям Дальнего Востока, а сам Сергеев с 1965 по
+      1972гг. являлся главным хирургом Хабаровского края.
+    </p>
+    <p>
+      Решением Хабаровской городской Думы от 22.02.2000 № 403 за неоценимый
+      вклад в развитие хирургической службы Хабаровского края «Краевой
+      клинической больнице №1» присвоено имя профессора С.И.Сергеева.
+    </p>
+  </section>
+</main>
+
+
+
     <hr>
     <footer>© Все права защищены</footer>
   </body>
