--- a/catalogue.html
+++ b/catalogue.html
@@ -5,32 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu</title>
-    <link rel="stylesheet" href="catalog.css" />
+    <link rel="stylesheet" href="catalogue.css" />
   </head>
   <body>
     <header>
-      <h1 align="center">Каталог</h1>
+      <h1 align="center">Меню</h1>
       <h2 align="center">
         Сайт Краевой Клинической больницы №1 гор. Хабаровска
       </h2>
       <hr />
-      <img src="logo.png" alt="logo" />
+      <img src="images/logo.png" alt="logo" />
     </header>
     <section>
       <ul class="ul-container">
         <li>
-          <img src="doctors_team.jpg" width="70" alt="doctors_team" />
+          <img src="images/doctors_team.jpg" width="70" alt="doctors_team" />
           <p>Наши врачи</p>
         </li>
         <li>
           <figure>
-            <img src="MRT.jpg" width="70" alt="Procedures" />
+            <img src="images/MRT.jpg" width="70" alt="Procedures" />
             <figcapерtion>Перечень процедур</figcapерtion>
           </figure>
         </li>
         <li>
           <figure>
-            <img src="Contacts.png" width="70" alt="Contacts" />
+            <img src="images/Contacts.png" width="70" alt="Contacts" />
             <figcapерtion>Контакты</figcapерtion>
           </figure>
         </li>
