--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Hospital</title>
   </head>
-  <body>
+  <body background="images/background.jpg">
    <header class="header">
     <div class="container">
       <nav class="nav">
@@ -22,7 +22,9 @@
         </ul>
 
         <div class="logo">
-          <img class="logo-img" src="images/logo.png" width="120" alt="logo">
+          <a href="index.html">
+            <img class="logo-img" src="images/logo.png" width="120" alt="logo">
+          </a>
         </div>
         <ul>
          <li>
@@ -40,71 +42,37 @@
 
 <main class="main">
   <section class="otdeleniya">
-    <h3 align="center">Отделения</h3>
-    <div>
-      <div class="otdeleniye">
-        <a class="otdeleniye-link" href="#">
-        <img  class="img-responsive" src="images/polyclinic.jpg" width="270" height="270" alt="">
-      </a>
-        <h6><a href="#">Поликлиника</a></h6>
-      </div>
-      <div class="otdeleniye">
-        <a class="otdeleniye-link" href="#">
-          <img class="img-responsive" src="images/hirurg.jpg" width="270" height="270" alt="">
-        </a>
-        <h6><a href="#">Хирургические отделения</a></h6>
-      </div>
-      <div class="otdeleniye">
-        <a class="otdeleniye-link" href="#">
-          <img  class="" src="images/terapevt.jpg" width="270" height="270" alt="hirurg">
-        </a>
-        <h6><a href="#">Терапевтические отделения</a></h6>
-      </div>
-      <div class="otdeleniye">
-        <a class="otdeleniye-link" href="#">
-          <img  class="img-responsive" src="images/heart.jpg" width="270" height="270" alt="">
-        </a>
-        <h6><a href="#">Первичное сосудистое отделение</a></h6>
-      </div>
+    <div class="container">
+      <h3 class="otd-title" align="center">Отделения</h3>
+      <ul class="otdeleniya-list">
+        <li class="otdeleniye">
+          <img src="images/polyclinic.jpg" width="120" alt="polyclinic">
+          <a href="#">Поликлиника</a>
+          <p>1 корпус</p>
+        </li>
+        <li class="otdeleniye">
+          <img src="images/heart.jpg" width="120"  alt="heart">
+          <a href="#">Сосудистая хирургия</a>
+          <p>2 корпус</p>
+        </li>
+        <li class="otdeleniye">
+          <img src="images/hirurg.jpg" width="120" alt="hirurg">
+          <a href="#">Хирургическое отделение</a>
+          <p>2 корпус</p>
+        </li>
+        <li class="otdeleniye">
+          <img src="images/terapevt.jpg" width="120"  alt="terapevt">
+          <a href="#">Терапевтическое отделениие</a>
+          <p>1 корпус</p>
+        </li>
+      </ul>
     </div>
   </section>
-  <section class="history">
-  <h4>История учреждения</h4>
-    <p></p>
-      Краевое государственное бюджетное учреждение здравоохранения «Краевая
-      клиническая больница №1» имени профессора С.И.Сергеева – одно из
-      старейших лечебных учреждений Дальнего Востока.
-    </p>
-    <p>
-      История «Краевой клинической больницы №1» г.Хабаровска началась 1-го
-      января 1898года, когда по постановлению городской думы была построена
-      лечебница на 25 коек. Уже в 1927 году больница расширилась до 240 коек,
-      открыты 7 профильных отделений. Бурное развитие больницы начинается с
-      1967 года, после строительства нового хирургического корпуса с открытием
-      специализированной легочной, сердечно-сосудистой хирургии, реанимации,
-      применения искусственной почки. Седьмого января 1979 года больница
-      переезжает в новое здание по улице Краснодарской, где и продолжается её
-      дальнейшее развитие до сегодняшнего дня.
-    </p>
-    <p>
-      Незабываемый вклад в историю развития больницы внес профессор
-      С.И.Сергеев, чьим именем названа больница.
-    </p>
-    <p>
-      Под руководством С.И.Сергеева в краевой больнице создавались и
-      развивались специализированные отделения: торакальное,
-      сердечно-сосудистое, онкологическое, отделение «искусственной почки»,
-      отделение анестезиологии и реанимации. Коллектив огромной клиники,
-      возглавляемой профессором С.И.Сергеевым, был флагманом по оказанию
-      хирургической помощи жителям Дальнего Востока, а сам Сергеев с 1965 по
-      1972гг. являлся главным хирургом Хабаровского края.
-    </p>
-    <p>
-      Решением Хабаровской городской Думы от 22.02.2000 № 403 за неоценимый
-      вклад в развитие хирургической службы Хабаровского края «Краевой
-      клинической больнице №1» присвоено имя профессора С.И.Сергеева.
-    </p>
+  <section>
+    
   </section>
+  <section class="history">
+  
 </main>
 
 
